SECURITY: Remove backup directory from git tracking
- Remove backup/ directory containing personal data from git
- Add backup/ to .gitignore to prevent future tracking
- Personal data was accidentally committed and pushed
- This commit removes personal information from public repository

--- a/YAVAR_ALTEREGO/.gitignore
+++ b/YAVAR_ALTEREGO/.gitignore
@@ -209,3 +209,14 @@ logs/
 # Backup files
 *.bak
 *.backup
+
+# Personal Development - Local Only
+# These files are for local development and won't be committed
+kb/faq/01-career-goals.md
+kb/faq/05-technical-skills.md
+kb/faq/06-projects-highlight.md
+kb/faq/10-contact-information.md
+me/summary.txt
+
+# Backup directory - contains personal data
+backup/
