FAISS persistent vector store + persona switching UI; README updated

--- a/AI_ALTEREGO/.gitignore
+++ b/AI_ALTEREGO/.gitignore
@@ -1,222 +1,14 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
-
-# C extensions
-*.so
-
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-
-# PyInstaller
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-cover/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-.pybuilder/
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pipenv
-#Pipfile.lock
-
-# UV
-#uv.lock
-
-# poetry
-#poetry.lock
-
-# pdm
-#pdm.lock
-.pdm.toml
-.pdm-python
-.pdm-build/
-
-# PEP 582
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# pytype static type analyzer
-.pytype/
-
-# Cython debug symbols
-cython_debug/
-
-# PyCharm
-#.idea/
-
-# Ruff stuff:
-.ruff_cache/
-
-# PyPI configuration file
-.pypirc
-
-# macOS
-.DS_Store
-
-# Project-specific
-# Knowledge base content (optional - you may want to track some content)
-# kb/*.pdf
-# kb/*.docx
-# kb/*.doc
-
-# PRIVACY PROTECTION - PERSONAL DATA
-# Personal information files
-# me/  # Allow me/ folder but exclude specific files below
-*.pdf
-*.docx
-*.doc
-
-# Allow tracking a visible placeholder and summary inside me/
-!me/.gitkeep
-!me/summary.txt
-
-# Contact information and personal details
-**/contact-information.md
-**/personal-details.md
-**/emergency-contact.md
-
-# Resume and LinkedIn data
-**/resume/
-**/linkedin.*
-**/cv.*
-
-# Personal summary and bio
-**/summary.txt
-**/bio.txt
-**/about.txt
-
-# Sensitive project files with personal info
-**/projects/*/readme.md
-
-# Environment and secrets
-.env
-.env.local
-.env.production
-.env.staging
-secrets/
-credentials/
-
-# Temporary files
-*.tmp
-*.temp
-
-# Logs that might contain personal data
-*.log
-logs/
-
-# Database files that might contain personal data
-*.db
-*.sqlite
-*.sqlite3
-
-# Backup files
-*.bak
-*.backup
-
-# Personal Development - Local Only
-# These files are for local development and won't be committed
-kb/faq/01-career-goals.md
-kb/faq/05-technical-skills.md
-kb/faq/06-projects-highlight.md
-kb/faq/10-contact-information.md
-me/summary.txt
-
-# Backup directory - contains personal data
+# Personal and backup data
 backup/
+me/
+kb/resume/
+
+# Vector index artifacts
+vector_store/
+
+# PDFs anywhere (avoid personal docs)
+*.pdf
+
+# Caches
+__pycache__/
+*.pyc
