--- a/AI_ALTEREGO/pyproject.toml
+++ b/AI_ALTEREGO/pyproject.toml
@@ -39,6 +39,7 @@ dependencies = [
     "smithery>=0.1.0",
     "speedtest-cli>=2.1.3",
     "wikipedia>=1.4.0",
+    "faiss-cpu>=1.8.0",
 ]
 
 [dependency-groups]
