Update for Hugging Face Spaces deployment
- Update .gitignore to exclude .env and OS files
- Update ui_gradio.py to use environment variables for port (HF Spaces compatibility)
- Sync persona_config.json with personas.py (added OFF-DOMAIN policy, updated RESPONSE GUIDELINES)
- Update all personas with OFF-DOMAIN / TRIVIAL TASK QUESTIONS POLICY
- Fix project folder name (removed leading space)
- Update project references to correct folder name

--- a/Context-Aware_AI_RAG_Assistant/.gitignore
+++ b/Context-Aware_AI_RAG_Assistant/.gitignore
@@ -12,3 +12,14 @@ vector_store/
 # Caches
 __pycache__/
 *.pyc
+
+# Environment variables (never commit API keys!)
+.env
+.env.local
+.env.*.local
+
+# OS files
+.DS_Store
+*.swp
+*.swo
+*~
