--- a/OpenAI_Agents_SDK/deep_research_pro/pyproject.toml
+++ b/OpenAI_Agents_SDK/deep_research_pro/pyproject.toml
@@ -9,13 +9,14 @@ dependencies = [
   "openai>=1.85.0",
   "pydantic>=2.11.0",
   "python-dotenv>=1.0.0",
-  "httpx>=0.28.0",
+  "httpx==0.27.2",
+  "certifi>=2024.0.0",
   "rich>=13.7.0",
+  "gradio>=4.0.0",
 ]
 
 [dependency-groups]
-dev = ["pytest>=8.0.0"]
+dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]
 
 [project.scripts]
 drp = "app.run:main"
-
