--- a/OpenAI_Agents_SDK/deep_research_pro/pyproject.toml
+++ b/OpenAI_Agents_SDK/deep_research_pro/pyproject.toml
@@ -13,10 +13,16 @@ dependencies = [
   "certifi>=2024.0.0",
   "rich>=13.7.0",
   "gradio>=4.0.0",
+  "markdown>=3.5.0",
+  "requests>=2.31.0",
+  "beautifulsoup4>=4.12.0",
+  "lxml>=5.0.0",
+  "pymupdf>=1.23.0",
 ]
 
 [dependency-groups]
 dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]
 
 [project.scripts]
-drp = "app.run:main"
+drp = "app.cli:main"
+
