--- a/OpenAI_Agents_SDK/deep_research_pro/pyproject.toml
+++ b/OpenAI_Agents_SDK/deep_research_pro/pyproject.toml
@@ -18,6 +18,9 @@ dependencies = [
   "beautifulsoup4>=4.12.0",
   "lxml>=5.0.0",
   "pymupdf>=1.23.0",
+  "python-docx>=1.1.0",
+  "plotly>=5.18.0",
+  "pandas>=2.0.0",
 ]
 
 [dependency-groups]
