--- a/OpenAI_Agents_SDK/deep_research_pro/pyproject.toml
+++ b/OpenAI_Agents_SDK/deep_research_pro/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
   "certifi>=2024.0.0",
   "rich>=13.7.0",
   "gradio>=4.0.0",
+  "streamlit>=1.28.0",
   "markdown>=3.5.0",
   "requests>=2.31.0",
   "beautifulsoup4>=4.12.0",
@@ -21,6 +22,7 @@ dependencies = [
   "python-docx>=1.1.0",
   "plotly>=5.18.0",
   "pandas>=2.0.0",
+  "weasyprint>=61.0",
 ]
 
 [dependency-groups]
